Update to SF Certification Vouchers FAQ covering Data Cloud and AI special offers from SF

--- a/sites/faq/how-to-get-sf-certification-vouchers.mdx
+++ b/sites/faq/how-to-get-sf-certification-vouchers.mdx
@@ -104,6 +104,12 @@ It is much more challenging if you work as an in-house. Many companies don't wan
 
 Another great source of vouchers is limited to employees of Salesforce Partners. Apart from getting those vouchers from their company, there are recurring opportunities given directly from Salesforce for certifications that are currently in their focus. The best place to look for them is to join Partner Community channels for specific products and check the description and recent posts for goodies.
 
+:::danger Current offers
+
+Currently Salesforce is offering a free Data Cloud Certification Voucher for employees of any Salesforce Partner Company that complete a 6 hour Data Cloud training. Check details and register [here](https://cloud.mail.salesforce.com/partnerdatacloud).
+
+:::
+
 <Button
     link='https://partners.salesforce.com/_ui/core/chatter/ui/ChatterPage'
     text="Partner Community"
@@ -112,7 +118,15 @@ Another great source of vouchers is limited to employees of Salesforce Partners.
 
 ### Vouchers from Salesforce
 
-In the past, Salesforce frequently publicly shared vouchers that at least cut down the price and sometimes even allowed for free exam attempts. For example, in the first half of 2023, a $100 off voucher made Salesforce Associate certification completely free. However, since then, those vouchers have become extremely scarce, and the few still appearing are much less beneficial. My favourite place to check which (if any) public vouchers are currently available is to visit the always-updated page by Dinesh Yadav:
+In the past, Salesforce frequently publicly shared vouchers that at least cut down the price and sometimes even allowed for free exam attempts. For example, in the first half of 2023, a $100 off voucher made Salesforce Associate certification completely free. However, since then, those vouchers have become extremely scarce, and the few still appearing are much less beneficial. 
+
+:::danger Current offers
+
+Currently Salesforce is offering free AI Associate and AI Specialist Certifications to promote their current focus on Agentforce and Gen AI features (starting 23rd September 2024). Apart from certs, they also provide free virtual hands-on trainings covering Agents, Copilot and Prompt Builder (starting November 2024). Check details [here](https://trailhead.salesforce.com/help?article=AI-Training-and-Certifications-for-All-FAQ).
+
+:::
+
+My favourite place to check which (if any) public vouchers are currently available is to visit the always-updated page by Dinesh Yadav:
 
 <Button
     link='https://dineshyadav.com/how-to-get-free-or-discounted-salesforce-certification-voucher/'
