--- a/docs/webinars/sfmc-webinar-salesforce-data-in-journey-builder.mdx
+++ b/docs/webinars/sfmc-webinar-salesforce-data-in-journey-builder.mdx
@@ -5,7 +5,6 @@ sidebar_label: SF Data in Journey Builder
 description: Learn how to integrate and use Salesforce CRM data with SFMC Journey Builder. In both ways. The right way.
 image: img/og/og-image-webinar-salesforce-data-in-journey-builder.png
 tags: [Webinar, Marketing Cloud, Best Practice, AMPScript, CRM, Configuration, Data Management, Integration, Journey]
-unlisted: true
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
@@ -15,16 +14,16 @@ import { YouTube } from '../../src/components/VideoEmbed.js';
 
 ## Table of Contents
 
-1. Salesforce Data Entry ([3:07](https://youtu.be/a8RPRvVOXak?t=187))
-2. Salesforce Data Bindings ([12:38](https://youtu.be/a8RPRvVOXak?t=758))
-3. Synchronized Data Extensions ([19:53](https://youtu.be/a8RPRvVOXak?t=1193))
-4. Salesforce Data through API ([1:03:17](https://youtu.be/a8RPRvVOXak?t=3797))
-5. Salesforce AMPScript functions ([1:03:17](https://youtu.be/a8RPRvVOXak?t=3797))
-6. Salesforce Journey Builder Activities ([1:03:17](https://youtu.be/a8RPRvVOXak?t=3797))
+1. Salesforce Data Entry ([3:07](https://youtu.be/Ru4Qh__3xdA?t=209))
+2. Salesforce Data Bindings ([12:38](https://youtu.be/Ru4Qh__3xdA?t=1494))
+3. Synchronized Data Extensions ([19:53](https://youtu.be/Ru4Qh__3xdA?t=1780))
+4. Salesforce Data through API ([1:03:17](https://youtu.be/Ru4Qh__3xdA?t=2071))
+5. Salesforce AMPScript functions ([1:03:17](https://youtu.be/Ru4Qh__3xdA?t=2231))
+6. Salesforce Journey Builder Activities ([1:03:17](https://youtu.be/Ru4Qh__3xdA?t=2491))
 
 ## Video
 
-<YouTube videoId="a8RPRvVOXak" title="Salesforce Data in Journey Builder with MCC Webinar Recording" />
+<YouTube videoId="Ru4Qh__3xdA" title="Salesforce Data in Journey Builder with MCC Webinar Recording" />
 
 <br/>
 
@@ -49,7 +48,7 @@ True | False | True | __Not added to SFMC__
 
 10 September 2024 | Salesforce Data in Journey Builder with Marketing Cloud Connect
 -- | --
-Recording | [YouTube](https://www.youtube.com/watch?v=a8RPRvVOXak&list=PLntZFZH56rSeuaF2vRaDPBIL6rH_vgLD3)
+Recording | [YouTube](https://www.youtube.com/watch?v=Ru4Qh__3xdA&list=PL_o00w2Z5LYHVcq56BLpBfJHRAghLhHkI)
 Slides | [PDF](https://github.com/MateuszDabrowski/mateuszdabrowski.pl/blob/master/static/pdf/%5B2024-09%5D%20SF%20CRM%20in%20Journey%20Builder%20with%20MCC.pdf)
 Articles | [SFMC MCC Integration Patterns](../config/sfmc-mcc-integration-patterns.mdx) <br/> Tim Ziter on [Salesforce Data Entry](https://handsonsfmc.com/how-to-create-a-salesforce-data-entry-event/) <br/> Salesforce on [Salesforce Journey Builder Activities](https://help.salesforce.com/s/articleView?id=sf.mc_jb_sales_service_cloud_best_practices.htm&type=5) <br/> Rafał Wolsztyniak on [Data Bindings](https://sfmc.quest/data-binding-with-the-update-contact-activity/)
 
