Fix to _Job Data View link is limits article

--- a/docs/config/sfmc-licence-limits.mdx
+++ b/docs/config/sfmc-licence-limits.mdx
@@ -172,7 +172,7 @@ Unfortuntaly, there is no way to get a Contact Count per Business Unit. It is be
 There are two, imperfect, workarounds:
 
 1. Whenever you import record to Marketing Cloud through any source, add Business Unit information to a custom Profile Attribute so that you can later retrieve it from [_EnterpriseAttribute Data View](./sfmc-system-data-views.mdx#_enterpriseattribute). Of course, it is easier said than done, as not all Contact sources will make this addition easy. However, if you mostly use [Synchronized Data Extensions in Multi-Org setup](./sfmc-mcc-integration-patterns.mdx) you should be able to leverage Automation Studio for that enrichment - just keep in mind the edge case of Contact injections coming from [Salesforce Data Entry in Journey Builder](../webinars/sfmc-webinar-salesforce-data-in-journey-builder.mdx).
-2. Another option - working even for past data - is to match Contacts against [_Job](./sfmc-system-data-views.mdx#_job_) or [_BusinessUnitUnsubscribes](./sfmc-system-data-views.mdx#_businessunitunsubscribes) Data Views that are Business Unit specific. Unfortunately it will work only for small subset of records that were sent an email within the last 6 months (in case of job). You may also try leveraging the [Send Logs](./sfmc-enhanced-send-log.mdx) if you configured them to be Business Unit Specific. However, it’s still a very limited match if you are using multichannel communication.
+2. Another option - working even for past data - is to match Contacts against [_Job](./sfmc-system-data-views.mdx#_job) or [_BusinessUnitUnsubscribes](./sfmc-system-data-views.mdx#_businessunitunsubscribes) Data Views that are Business Unit specific. Unfortunately it will work only for small subset of records that were sent an email within the last 6 months (in case of job). You may also try leveraging the [Send Logs](./sfmc-enhanced-send-log.mdx) if you configured them to be Business Unit Specific. However, it’s still a very limited match if you are using multichannel communication.
 
 :::
 
