Next batch of adding Agentforce onto the website

--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -12,7 +12,9 @@ import { Button } from '../src/components/Buttons.js';
 
 <LeadText content="SSJS + JS + AMPScript + SQL + SFMC & MCP Config documentation and code snippets that I find useful for developing Salesforce Marketing Cloud." />
 
-## Zen of SFMC
+## Marketing Cloud Engagement
+
+### Zen of SFMC
 
 Salesforce Marketing Cloud is a complex and flexible tool. This combination is a dream-come-true set for enterprise Marketing Automation tools, but on the other hand, it enables mistakes and messy solutions. Find the right path to success through a best-practice fuelled checklist full of tool-based explanations and examples.
 
@@ -21,11 +23,11 @@ Salesforce Marketing Cloud is a complex and flexible tool. This combination is a
     text='Read about Zen of SFMC'
 />
 
-## Server-Side JavaScript
+### Server-Side JavaScript
 
 SSJS is an XX-century version of JavaScript paired with proprietary libraries created by Salesforce. It is one of the programmatic tools useful to leverage Marketing Cloud to its fullest potential. I am creating this documentation to make my (and hopefully also yours) work easier.
 
-### SSJS Documentation
+#### SSJS Documentation
 
 - [If & Switch](./ssjs/ssjs-if-and-switch.mdx)
 - [Loops](./ssjs/ssjs-loops.mdx)
@@ -33,7 +35,7 @@ SSJS is an XX-century version of JavaScript paired with proprietary libraries cr
 - [Style Guide](./ssjs/ssjs-style-guide.mdx)
 - [Performance](./ssjs/ssjs-vs-ampscript-performance.mdx)
 
-### SSJS Snippets
+#### SSJS Snippets
 
 - [AMPScript in SSJS](./ssjs/snippets/ampscript-in-ssjs.mdx)
 - [MobileConnect Phone Change](./ssjs/snippets/ssjs-mobileconnect-phone-change.mdx)
@@ -45,17 +47,17 @@ SSJS is an XX-century version of JavaScript paired with proprietary libraries cr
     text='Read about SSJS'
 />
 
-## JavaScript
+### JavaScript
 
 In this part, I am gathering selected elements of modern vanilla JavaScript that I find helpful for marketing technologists. Expect guides on asynchronous calls to API and backend resources, form-focused DOM manipulation and playing with data objects.
 
-### JS Documentation
+#### JS Documentation
 
 - [If & Switch](./js/js-if-and-switch.mdx)
 - [Loops](./js/js-loops.mdx)
 - [Document Object Model (DOM)](./js/js-dom.mdx)
 
-### JS Snippets
+#### JS Snippets
 
 - [Tailor with Data](./js/snippets/tailor-with-data.mdx)
 - [Engage with Countdown](./js/snippets/engage-with-countdown.mdx)
@@ -66,16 +68,16 @@ In this part, I am gathering selected elements of modern vanilla JavaScript that
     text='Read about JavaScript'
 />
 
-## AMPScript
+### AMPScript
 
 AMPScript is a proprietary scripting language in Salesforce Marketing Cloud along with [SSJS](#server-side-javascript). Out of the two, it is simpler and more performant, but too limited for complex solutions. Good starting point for marketers without development experience. Best option for scripting in messaging.
 
-### AMPScript Documentation
+#### AMPScript Documentation
 
 - [Style Guide](./ampscript/ampscript-style-guide.mdx)
 - [Performance](./ssjs/ssjs-vs-ampscript-performance.mdx)
 
-### AMPScript Snippets
+#### AMPScript Snippets
 
 - [AMPScript in SSJS](./ssjs/snippets/ampscript-in-ssjs.mdx)
 
@@ -84,11 +86,11 @@ AMPScript is a proprietary scripting language in Salesforce Marketing Cloud alon
     text='Read about AMPScript'
 />
 
-## SFMC SQL
+### SFMC SQL
 
 To fully leverage the Salesforce Marketing Cloud Data Extensions and Automation Studio, SQL is a must-have. Here I gathered both the language basics and some of the most valuable snippets to copy and paste shamelessly.
 
-### SQL Documentation
+#### SQL Documentation
 
 - [SQL Basics](./sql/sfmc-sql-basics.mdx)
 - [Select](./sql/sfmc-sql-select.mdx)
@@ -105,7 +107,7 @@ To fully leverage the Salesforce Marketing Cloud Data Extensions and Automation 
 - [NULL Functions](./sql/sfmc-sql-null-functions.mdx)
 - [Style Guide](./sql/sfmc-sql-style-guide.mdx)
 
-### SQL Snippets
+#### SQL Snippets
 
 - [Debugging Email Sends](./sql/snippets/sfmc-sql-debugging-email-sends.mdx)
 - [Debugging Value Length](./sql/snippets/sfmc-sql-debugging-value-length.mdx)
@@ -115,7 +117,7 @@ To fully leverage the Salesforce Marketing Cloud Data Extensions and Automation 
     text='Read about SFMC SQL'
 />
 
-## SFMC Config
+### SFMC Config
 
 Many things in Salesforce Marketing Cloud aren't coding but have a massive impact on the code. Permissions. System Data Views. Configuration options. Here I focus on the most important ones that are crucial for Marketing Cloud developers.
 
