Updates to Newsletter messaging to cover new Agentforce focus

--- a/sites/newsletter.mdx
+++ b/sites/newsletter.mdx
@@ -1,9 +1,9 @@
 ---
 id: newsletter
 title: Newsletter
-description: Get yet another email in your inbox. This time, about SFMC.
+description: Get yet another email in your inbox. This time, about Salesforce Marketing Cloud & Agentforce.
 image: img/og/og-image-newsletter.png
-tags: [Marketing Cloud, Personalization, Best Practice]
+tags: [Marketing Cloud, Personalization, Agentforce, Best Practice, Email]
 ---
 
 import { LeadText } from '../src/components/LeadText.js';
@@ -11,7 +11,7 @@ import { Form } from '../src/components/FormEmbed.js';
 
 <LeadText content="Get yet another email in your inbox. This time, about SFMC." />
 
-Looking for a Salesforce Marketing Cloud-focused newsletter lacking any specific cadence and jumping from one topic to another?
+Looking for a Salesforce Marketing Cloud, Personalization & Agentforce focused newsletter lacking any specific cadence and jumping from one topic to another?
 
 You are in the right place!
 
@@ -19,7 +19,7 @@ I plan to send short emails about:
 
 - New content on my site.
 - Interesting articles and videos by other Trailblazers.
-- Exciting news from the SFMC world.
+- Exciting news from the Salesforce Marketing Cloud and Agentforce world.
 - Some random marketing-related stuff I find worthwhile.
 
 Sounds good? Here you can join the list:
