Removal of Firefox recommendation after Mozilla privacy policy change

--- a/sites/toolset.mdx
+++ b/sites/toolset.mdx
@@ -14,7 +14,7 @@ MacOS. Windows if needed. Sorry Ubuntu, it wasn't working for me anymore.
 
 ## Browser
 
-Safari for non-development, [Firefox Developer Edition](https://www.mozilla.org/en-US/firefox/developer/) and [Chrome](https://www.google.com/chrome/) for everything code related.
+Safari for non-development, and Edge for everything code related.
 
 ## Text Editor
 
