Change from american Edge to european Vivaldi

--- a/sites/toolset.mdx
+++ b/sites/toolset.mdx
@@ -10,11 +10,11 @@ import { LeadText } from '../src/components/LeadText.js';
 
 ## Operating System
 
-MacOS. Windows if needed. Sorry Ubuntu, it wasn't working for me anymore.
+MacOS. Sorry Ubuntu, it wasn't working for me anymore.
 
 ## Browser
 
-Safari for non-development, and Edge for everything code related.
+Safari for non-development, and european Vivaldi for everything code related.
 
 ## Text Editor
 
