--- a/sites/toolset.mdx
+++ b/sites/toolset.mdx
@@ -68,10 +68,9 @@ Apart from the above main areas, I also love some smaller apps that make my life
 
 1. [Numi](https://numi.app/) - the best calculator app you can have. By far.
 2. [Better Touch Tool](https://folivora.ai/) not only allows you to leverage gestures to their fullest but also takes care of windows snapping to the edges.
-3. [Mailplane](https://mailplaneapp.com/) - if you use Gmail and have a Mac, this app is a must.
-4. [PDF Expert](https://pdfexpert.com/) is the best PDF app you can have.
-5. [Cleanshot](https://cleanshot.com) makes capturing, annotating and sharing screenshots a breeze.
-6. [Reeder](https://reederapp.com) - RSS is my favourite way of keeping up to speed with topics that are important to me. Reeder does it best.
+3. [PDF Expert](https://pdfexpert.com/) was the best PDF app you can have. Now it's still a good one, but keeps getting bloated.
+4. [Cleanshot](https://cleanshot.com) makes capturing, annotating and sharing screenshots a breeze.
+5. [Reeder](https://reederapp.com) - RSS is my favourite way of keeping up to speed with topics that are important to me. Reeder does it best.
 6. For tasks and notes, after testing multiple options, I stuck with Apple Notes and Reminders.
 
 For Windows, there is one must-have power user tool: [Microsoft PowerToys](https://github.com/microsoft/PowerToys). Make your day-to-day Windows life better.
