Next batch of website restructuring

--- a/docs/salesforce/marketing-cloud-engagement/zen-of-sfmc.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/zen-of-sfmc.mdx
@@ -9,7 +9,7 @@ toc_max_heading_level: 4
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
-import { LeadText } from '../src/components/LeadText.js';
+import { LeadText } from '../../../src/components/LeadText.js';
 
 <LeadText content="Salesforce Marketing Cloud implementation, development and operations Best Practices. In brief and detail." />
 
