--- a/sites/faq/salesforce/how-to-get-sf-certification-vouchers.mdx
+++ b/sites/faq/salesforce/how-to-get-sf-certification-vouchers.mdx
@@ -7,8 +7,8 @@ image: img/og/og-image-faq-sf-certification-vouchers.png
 tags: [Marketing Cloud, FAQ]
 ---
 
-import { LeadText } from '../../src/components/LeadText.js';
-import { Button } from '../../src/components/Buttons.js';
+import { LeadText } from '../../../src/components/LeadText.js';
+import { Button } from '../../../src/components/Buttons.js';
 
 <LeadText content="Salesforce Certifications. What, why and how (you can pay less)." />
 
@@ -118,7 +118,7 @@ Currently Salesforce is offering a free Data Cloud Certification Voucher for emp
 
 ### Vouchers from Salesforce
 
-In the past, Salesforce frequently publicly shared vouchers that at least cut down the price and sometimes even allowed for free exam attempts. For example, in the first half of 2023, a $100 off voucher made Salesforce Associate certification completely free. However, since then, those vouchers have become extremely scarce, and the few still appearing are much less beneficial. 
+In the past, Salesforce frequently publicly shared vouchers that at least cut down the price and sometimes even allowed for free exam attempts. For example, in the first half of 2023, a $100 off voucher made Salesforce Associate certification completely free. However, since then, those vouchers have become extremely scarce, and the few still appearing are much less beneficial.
 
 :::danger Current offers
 
