--- a/sites/faq/salesforce/how-to-get-sfmc-hands-on-experience.mdx
+++ b/sites/faq/salesforce/how-to-get-sfmc-hands-on-experience.mdx
@@ -7,7 +7,7 @@ image: img/og/og-image-faq-sfmc-hands-on-experience.png
 tags: [Marketing Cloud, FAQ]
 ---
 
-import { LeadText } from '../../src/components/LeadText.js';
+import { LeadText } from '../../../src/components/LeadText.js';
 
 <LeadText content="You want to learn Salesforce Marketing Cloud. And the best way to learn is to get your hands dirty. So, how can you get access to the SFMC playground?" />
 
